07 Aug 2003 mipsator
 * rewritten parse_opt().
 * update sample files to work with the new parser.

01 Aug 2003 mipsator
 * added test_pmkscan target plus some cosmetics in Makefile.

# snapshot 0.5.3

01 Aug 2003 mipsator
 * fixed a bad free() in pmkscan.

31 Jul 2003 mipsator
 * improved dynarrays to store void* instead of char*.
 * fixed use of new dynarrays.
 * updated man/pmkfile.5 to sync with reality.

30 Jul 2003 mipsator
 * massive style conforming.

29 Jul 2003 mipsator
 * style, descriptions and misc in pmk.
 * added pmk_check_type() and some style cosmetics in func.
 * updated pmkfile sample to use CHECK_TYPE.

28 Jul 2003 mipsator
 * improved dir_explore().
 * added scanning support for c++ files.
 * added da_shift() and da_resize() in dynarray.
 * improved da_pop() and da_push() in dynarray.
 * changed return type of da_size() and da_usize() in dynarray.
 * updated test/da_test.c to use da_shift().

26 Jul 2003 mipsator
 * added dir_recurse() in pmkscan to make it scanning a complete tree.
 * added missing function comments in parse.c .
 * added prsdata_destroy().
 * re-enable error messages in parse().
 * added init checks.

# snapshot 0.5.2

24 Jul 2003 mipsator
 * added dir_explore() as first step to recursivity.

23 Jul 2003 mipsator
 * added detection and processing of functions in pmkscan.
 * replaced free() by hash_free_hcell() where needed in hash.
 * misc in pmkscan.
 * fixed ac_process_dyn_var().
 * another misc changes in pmkscan.
 * two other fixes in hash.

22 Jul 2003 mipsator
 * rewritten hash_keys() to return a new structure (hkeys).
 * fix use of hash_keys() in sources.

21 Jul 2003 mipsator
 * added output_file() and misc in pmkscan.
 * improved hash functions to work with (void*) instead of (char*).
 * update all files that use hash_add() and hash_get().
 * improve pmkscan for data parsing and output file.
 * updated data/pmkscan.dat file.
 * updated Makefile to install pmkscan.