@@ -1,6 +1,7 @@
 07 Aug 2003 mipsator
  * rewritten parse_opt().
- * update sample files to work with the new parser.
+ * updated sample files to work with the new parser.
+ * added parser_test.c into test directory.
 
 01 Aug 2003 mipsator
  * added test_pmkscan target plus some cosmetics in Makefile.
